--- a/movies/src/app/featured-movies/featured-movies.component.html
+++ b/movies/src/app/featured-movies/featured-movies.component.html
@@ -1,1 +1,7 @@
-<p>featured-movies works!</p>
+<div class="row">
+    <div class="col" *ngFor="let movie of movies; index as i">
+        <app-movie-comp [movie]="movie">
+            <p>This is movie number {{i + 1}}</p>
+        </app-movie-comp>
+    </div>
+</div>
