--- a/movies/src/app/home-page/home-page.component.html
+++ b/movies/src/app/home-page/home-page.component.html
@@ -1,1 +1,5 @@
-<p>home-page works!</p>
+<h1>Movie data base</h1>
+<a href="/movie-list" target="">Filmovi lista</a>
+<br>
+
+<a href="/featured-movies" target="">Featured</a>
