--- a/movies/src/app/app.component.html
+++ b/movies/src/app/app.component.html
@@ -1,35 +1,36 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Movie data base</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+        <!--<li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Home</a>
+        </li>-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Search
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          <ul class="dropdown-menu active">
+            <li><a class="dropdown-item" href="/single-search">Single movie</a></li>
+            <li><a class="dropdown-item" href="/search-list">Multiple match</a></li>
           </ul>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link"  href="/featured-movies">Featured movies</a>
+        </li>
+
       </ul>
     </div>
   </div>
 </nav>
 
 <div style="text-align: center;">
-  <h1>Movie data base</h1>
-  <h2>Search for your favorite movie</h2>
-  <app-movie-list></app-movie-list>
+  <!--<h1>Movie data base</h1>
+   <h2>Search for your favorite movie</h2>
+   <app-movie-list></app-movie-list>-->
+  <router-outlet></router-outlet>
 </div>
