--- a/movies/src/app/movie-comp/movie-comp.component.html
+++ b/movies/src/app/movie-comp/movie-comp.component.html
@@ -3,7 +3,7 @@
 <div class="movie">
     <div><img class="movie__image" [src]="movie.posterURL" alt="IMG"> </div>
     <h3>{{movie.name}}</h3>
-    <p>{{movie.year}}</p>
+    <p>{{movie.Year}}</p>
     <p>{{movie.director}}</p>
 </div>
 
