--- a/movies/src/app/movie-detail/movie-detail.component.html
+++ b/movies/src/app/movie-detail/movie-detail.component.html
@@ -1,1 +1,37 @@
 <p>movie-detail works!</p>
+
+<div class="movie">
+    <div><img class="movie__image" [src]="movie.posterURL" alt="IMG"> </div>
+    <h3>{{movie.name}}</h3>
+    <p>{{movie.Year}}</p>
+
+    <div class="" *ngIf="movie.rated">
+        <p>{{movie.rated}}</p>
+    </div>
+
+    <p>{{movie.rated}}</p>
+    <p>{{movie.director}}</p>
+    <p>{{movie.genre}}</p>
+
+    <p>{{movie.runtime}}</p>
+    <p>{{movie.plot}}</p>
+    <p>{{movie.actors}}</p>
+    <p>{{movie.awards}}</p>
+    <p>{{movie.boxOffice}}</p>
+    <p>{{movie.country}}</p>
+    <p>{{movie.language}}</p>
+    <p>{{movie.production}}</p>
+    <p>{{movie.released}}</p>
+    <p>{{movie.runtime}}</p>
+    <p>{{movie.writer}}</p>
+    <p>{{movie.imdbRating}}</p>
+    <p>{{movie.imdbVotes}}</p>
+    <p>{{movie.imdbID}}</p>
+    <p>{{movie.type}}</p>
+    <p>{{movie.dvd}}</p>
+    <p>{{movie.website}}</p>
+    <p>{{movie.response}}</p>
+
+
+    
+</div>
