Adding search functionality

--- a/movies/src/app/movie-comp/movie-comp.component.html
+++ b/movies/src/app/movie-comp/movie-comp.component.html
@@ -1,10 +1,10 @@
 <!--<p>movie-comp works!</p>-->
 
 <div class="movie">
-    <div><img class="movie__image" [src]="movie.posterURL" alt="IMG"> </div>
-    <h3>{{movie.name}}</h3>
+    <div><img class="movie__image" [src]="movie.Poster" alt="IMG"> </div>
+    <h3>{{movie.Title}}</h3>
     <p>{{movie.Year}}</p>
-    <p>{{movie.director}}</p>
+    <p>{{movie.Director}}</p>
 </div>
 
 <!--<div class="card" style="width: 18rem;">
