--- a/movies/src/app/search/search.component.html
+++ b/movies/src/app/search/search.component.html
@@ -17,7 +17,7 @@
 
 
 <div class="d-flex  justify-content-center " >
-    <div class="d-flex justify-content-center card"  style="width: 50rem;">
+    <div class="d-flex justify-content-center card"  >
         <div class="card-body ">
             <form class="custom-form" >
                 <div class="form-group">
