--- a/movies/src/app/single-search/single-search.component.html
+++ b/movies/src/app/single-search/single-search.component.html
@@ -1,16 +1,34 @@
 <!-- <p>single-search works!</p> -->
 
-<form class="custom-form" #movieForm="ngForm" (ngSubmit)="createMovie(movieForm)">
+<!-- <form class="custom-form" #movieForm="ngForm" (ngSubmit)="createMovie(movieForm)">
     <div>
         <button type="submit" class="btn btn-primary m-3 ">Prikazi film</button>
     </div>
+</form> -->
 
-</form>
+<div class="d-flex  justify-content-center" >
+    <div class="card pretragaS" style="width: 50rem;">
+        <form class="custom-form" #movieForm="ngForm" (ngSubmit)="searchMovie(movieForm)">
+            <div>
+                <input class="form-control inputPolja" type="text" name="title" id="movieTitle1"
+                    [(ngModel)]="movieTitle" placeholder="Enter movie title">
+            </div>
+            <div>
+                <input class="form-control inputPolja" type="text" name="title" id="apikey1" [(ngModel)]="apiKey"
+                    placeholder="Enter your API key">
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary m-3 ">Pretraga</button>
+            </div>
+        </form>
+    </div>
+</div>
+
 
 
 <div class="">
-    <div class="" *ngIf="movie">
-        <p>{{movie.Title}}</p>
+    <div class="" *ngIf="sQuerry">
+        <p>{{sQuerry}}</p>
     </div>
 </div>
 
@@ -21,12 +39,11 @@
 
 
 
-<hr>
 
-  <div class="">
+
+<div class="">
     <div class="" *ngIf="movie2">
         <!--<p>{{movie2.Title}}</p> -->
         <app-movie-detail [movie]="movie2"></app-movie-detail>
     </div>
 </div>
-
