--- a/movies/src/app/movie-detail/movie-detail.component.html
+++ b/movies/src/app/movie-detail/movie-detail.component.html
@@ -40,6 +40,7 @@
     
     <p>Website: {{movie.Website}}</p>
     <p>Metascore: {{movie.Metascore}}</p>
+    <a href="/movie-by-id?id={{movie.imdbID}}&apiKey={{apiKey}}" >Details</a>
 
 
 
