--- a/movies/src/app/single-search/single-search.component.html
+++ b/movies/src/app/single-search/single-search.component.html
@@ -1,5 +1,3 @@
-<!-- <p>single-search works!</p> -->
-
 <!-- <form class="custom-form" #movieForm="ngForm" (ngSubmit)="createMovie(movieForm)">
     <div>
         <button type="submit" class="btn btn-primary m-3 ">Prikazi film</button>
@@ -10,7 +8,6 @@
     <div class="card pretragaS" style="width: 50rem;">
         <form class="custom-form" #movieForm="ngForm" (ngSubmit)="searchMovie(movieForm)">
             
-
             <div class="form-group">
                 <div class=" d-flex m-1 ms-2 justify-content-start">
                     <label for="movieName" >Movie name:</label>                          
@@ -21,7 +18,14 @@
             </div>
 
 
-
+            <div class="form-group my-4">
+                <div class=" d-flex m-1 ms-2 justify-content-start">
+                    <label for="movieName" >Movie year:</label>  
+                </div>
+                                    
+                <input class="form-control inputPolja" type="number" name="year" id="year1" [(ngModel)]="year"
+                placeholder="Enter movie year">
+            </div>
 
 
             <div class="form-group">
@@ -33,7 +37,6 @@
                     placeholder="Enter your API key">
             </div>
 
-
             <div>
                 <button type="submit" class="btn btn-primary m-3 ">Pretraga</button>
             </div>
@@ -41,13 +44,8 @@
     </div>
 </div>
 
-
-
-
-
 <div class="">
     <div class="" *ngIf="movie2">
-        <!--<p>{{movie2.Title}}</p> -->
         <app-movie-detail [movie]="movie2"></app-movie-detail>
     </div>
 </div>
