--- a/movies/src/app/movie-by-id/movie-by-id.component.html
+++ b/movies/src/app/movie-by-id/movie-by-id.component.html
@@ -1,5 +1,6 @@
 <!-- <p>movie-by-id works!</p> -->
 
+<body background="assets/bg.jpg" bgcolor="#000000" bgproperties="fixed">
 
 <div class="">
     <div class="" *ngIf="movie2">
@@ -7,3 +8,5 @@
         <app-movie-detail [movie]="movie2"></app-movie-detail>
     </div>
 </div>
+
+</body>
