--- a/movies/src/styles.css
+++ b/movies/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+.btn-primary {
+    background-color: #6096ba;
+    color: white;
+    border: none;
+    border-radius: 8px;
+}
+
+.btn-primary:hover {
+    background-color: #274c77;
+  
+}
+
