--- a/movies/src/app/app.component.html
+++ b/movies/src/app/app.component.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Movie data base</a>
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary" >
+  <div class="container-fluid" >
+    <a class="navbar-brand" href="#">Movie database</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -29,8 +30,13 @@
 </nav>
 
 <div style="text-align: center;">
-  <!--<h1>Movie data base</h1>
+  <!--<h1>Movie database</h1>
    <h2>Search for your favorite movie</h2>
    <app-movie-list></app-movie-list>-->
   <router-outlet></router-outlet>
 </div>
+
+
+<br> <br>
+
+<app-footer></app-footer>
