--- a/movies/src/app/movie-detail/movie-detail.component.html
+++ b/movies/src/app/movie-detail/movie-detail.component.html
@@ -1,4 +1,4 @@
-<div class="movie">
+<div class="movie moja-kartica">
     <div><img class="movie__image" [src]="movie.Poster" alt="IMG"> </div>
     <h2>{{movie.Title}}</h2>
     <p>{{movie.Year}}</p>
@@ -86,7 +86,11 @@
     </div>
 
 
-    <a href="/movie-by-id?id={{movie.imdbID}}&apiKey={{apiKey}}">Details</a>
+    <a href="/movie-by-id?id={{movie.imdbID}}&apiKey={{apiKey}}">
+        <button type="submit" class="btn btn-primary m-3 " >Details</button>
+
+    </a>
+    
 
 
 </div>
