--- a/movies/src/app/search/search.component.css
+++ b/movies/src/app/search/search.component.css
@@ -1,3 +1,24 @@
 input.ng-invalid.ng-touched {
     border: 1px solid red;
 }
+
+.pretragaS{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
+    border: 1px solid #e8eeef;
+    border-radius: 10px;
+    background-color: #eceff0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
+}
+
+.inputPolja{
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+   /* border: 1px solid #ccc;*/
+   border-radius: 8px;
+}
